# neml2

./: .gitignore  CMakeLists.txt  CMakePresets.json  pyproject.toml
.github/workflows/: cpp.yml
cmake/Modules/: FindGperftools.cmake  InstallGperftools.sh.in  InstallWASP.sh.in
doc/: CMakeLists.txt
doc/config/: DoxygenLayout.xml  DoxygenLayoutPython.xml  custom.css
doc/content/installation/: customization.md  deps.md
doc/tutorials/: contributing.md  naming_conventions.md  tutorials.md
doc/tutorials/extension/: extension.md
doc/tutorials/extension/model_composition/: main.md
doc/tutorials/models/: input_file.md
doc/tutorials/models/evaluation_device/: main.md
doc/tutorials/models/implicit_model/: main.md
doc/tutorials/models/just_in_time_compilation/: main.md
doc/tutorials/models/model_composition/: main.md
doc/tutorials/models/model_parameters/: main.md
doc/tutorials/models/model_parameters_revisited/: main.md
doc/tutorials/models/running_your_first_model/: main.md
doc/tutorials/models/transient_driver/: main.md
doc/tutorials/models/vectorization/: main.md
doc/tutorials/optimization/: optimization.md  pyzag.md
doc/tutorials/optimization/parameter_calibration/: main.md
doc/tutorials/tensors/broadcasting/: main.md
doc/tutorials/tensors/indexing/: main.md
doc/tutorials/tensors/tensor_types/: main.md
include/neml2/base/: EnumSelectionBase.h  HITParser.h  LabeledAxis.h  Parser.h  guards.h
include/neml2/jit/: types.h  utils.h
include/neml2/misc/: string_utils.h  types.h
include/neml2/models/: BufferStore.h  ImplicitUpdate.h  LinearCombination.h  ParameterStore.h  Variable.h  VariableStore.h
include/neml2/models/phase_field_fracture/: PowerDegradationFunction.h  RationalDegradationFunction.h  StrainEnergyDensity.h
include/neml2/models/porous_flow/: AdvectiveStress.h
include/neml2/models/solid_mechanics/: FluxRateDependentCreepStrainRate.h
include/neml2/tensors/: PrimitiveTensor.h  R2Base.h  SWR4.h  Tensor.h  TensorBase.h  TensorBaseImpl.h  Vec.h  WSR4.h  WWR4.h  indexing.h  shape_utils.h
include/neml2/tensors/functions/linalg/: dsptrf.h  eigh.h  ieigh.h
python/: CMakeLists.txt
python/neml2/: core.cxx  crystallography.cxx  indexing.h  math.cxx  reserved.cxx  tensors.cxx  types.h
python/neml2/tensors/: MillerIndex.cxx  PrimitiveTensor.h  Quaternion.cxx  R2.cxx  R2Base.h  R3.cxx  R4.cxx  R5.cxx  R8.cxx  Rot.cxx  SFFR4.cxx  SFR3.cxx  SFR4.cxx  SR2.cxx  SSFR5.cxx  SSR4.cxx  SSSSR8.cxx  SWR4.cxx  Scalar.cxx  Tensor.cxx  TensorBase.h  Vec.cxx  VecBase.h  WFR4.cxx  WR2.cxx  WSR4.cxx  WWR4.cxx
runner/: CMakeLists.txt
runner/src/: main.cxx
scripts/: filter_cc.py
src/neml2/: CMakeLists.txt
src/neml2/base/: DiagnosticsInterface.cxx  EnumSelection.cxx  EnumSelectionBase.cxx  HITParser.cxx  LabeledAxis.cxx  LabeledAxisAccessor.cxx  Parser.cxx  TensorName.cxx
src/neml2/dispatchers/: derivmap_helpers.cxx
src/neml2/models/: HermiteSmoothStep.cxx  ImplicitUpdate.cxx  Interpolation.cxx  LinearCombination.cxx  LinearInterpolation.cxx  Model.cxx  ParameterStore.cxx  ScalarMultiplication.cxx  SymmetricHermiteInterpolation.cxx  Variable.cxx  VariableStore.cxx
src/neml2/models/chemical_reactions/: ContractingGeometry.cxx
src/neml2/models/phase_field_fracture/: LinearIsotropicStrainEnergyDensity.cxx  PowerDegradationFunction.cxx  RationalDegradationFunction.cxx  StrainEnergyDensity.cxx
src/neml2/models/porous_flow/: AdvectiveStress.cxx
src/neml2/models/solid_mechanics/: FluxRateDependentCreepStrainRate.cxx  LinearKinematicHardening.cxx  Normality.cxx
src/neml2/models/solid_mechanics/crystal_plasticity/: LinearSingleSlipHardeningRule.cxx  PowerLawSlipRule.cxx  SingleSlipStrengthMap.cxx  VoceSingleSlipHardeningRule.cxx
src/neml2/tensors/: R2Base.cxx  Tensor.cxx  mandel_notation.cxx  shape_utils.cxx
src/neml2/tensors/functions/: diff.cxx
src/neml2/tensors/functions/linalg/: dsptrf.cxx  eigh.cxx  ieigh.cxx
tests/: CMakeLists.txt
tests/include/: TransientRegression.h  VTestVerification.h  utils.h
tests/regression/chemical_reactions/pyrolysis/: model.i
tests/regression/chemical_reactions/solidification/: model.i
tests/regression/chemical_reactions/solidification/gold/: result.pt
tests/regression/phase_field_fracture/: regression_phase_field_fracture.cxx
tests/regression/phase_field_fracture/elastic_brittle_fracture/: small_deformation.i
tests/regression/solid_mechanics/: regression_solid_mechanics.cxx
tests/regression/solid_mechanics/phase_field_fracture/: LinearElastic_PFFSim_FB.i
tests/src/: ModelUnitTest.cxx  VTestVerification.cxx
tests/unit/models/: HermiteSmoothStep2.i  ScalarLinearCombination_nl_params2.i  ScalarLinearInterpolation2.i  SymmetricHermiteInterpolation.i  test_ImplicitUpdate.cxx  test_LabeledAxis.cxx
tests/unit/models/phase_field_fracture/: LinearIsotropicStrainEnergyDensity1.i  LinearIsotropicStrainEnergyDensity10.i  LinearIsotropicStrainEnergyDensity2.i  LinearIsotropicStrainEnergyDensity3.i  LinearIsotropicStrainEnergyDensity4.i  LinearIsotropicStrainEnergyDensity6.i  LinearIsotropicStrainEnergyDensity7.i  LinearIsotropicStrainEnergyDensity8.i  LinearIsotropicStrainEnergyDensity9.i  RationalDegradationFunction.i
tests/unit/models/porous_flow/: AdvectiveStress.i
tests/unit/models/solid_mechanics/: FluxRateDependentCreepStrainRate1.i  FluxRateDependentCreepStrainRate2.i  LinearKinematicHardening_nl_params.i
tests/unit/models/solid_mechanics/crystal_plasticity/: LinearSingleSlipHardeningRule_nl_params.i  PowerLawSlipRule_nl_params.i  SingleSlipStrengthMap_nl_params.i  VoceSingleSlipHardeningRule_nl_params.i
tests/unit/tensors/functions/linalg/: test_eigh.cxx
