[build-system]
requires = [
  "setuptools>=42",
  "cmake>=3.26,<4.0",
  "ninja",
  "pybind11",
  "pybind11-stubgen",
  "packaging",
]
build-backend = "setuptools.build_meta"

[project]
name = "neml2"
version = "2.0.0"
authors = [
  { name = "Mark Messner", email = "messner@anl.gov" },
  { name = "Gary Hu", email = "thu@anl.gov" },
]
description = "GPU-enabled vectorized material modeling library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch"]

[tool.black]
line-length = 100

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*win* *manylinux_i686 *manylinux_aarch64 *manylinux_ppc64le *manylinux_s390x *manylinux_armv7l *musllinux*"

environment = { CMAKE_GENERATOR = "Ninja" }
build-verbosity = 1

before-all = ""
before-build = "python -m pip install -r requirements.txt cmake ninja torch"

test-requires = "pytest torch pyzag==1.1.1 graphviz"
test-command = "pytest -v {project}/python/tests"

[tool.cibuildwheel.linux]
repair-wheel-command = ""

[tool.cibuildwheel.macos]
repair-wheel-command = ""
